objects/Approval_Task_Instance__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Rejected_Date__c</fullName>
        <label>Approved/Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver_Type__c</fullName>
        <label>Approver Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PIYE</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approvers__c</fullName>
        <label>Approvers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delegateduser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Task_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Status__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_AssignedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Task_Instances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reassigned_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassigned Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WaiverRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Waiver Rule List</label>
        <referenceTo>Waiver_Rule_List__c</referenceTo>
        <relationshipLabel>Approval Task Instances</relationshipLabel>
        <relationshipName>Approval_Task_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval Task Instance</label>
    <nameField>
        <label>Approval Task Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Task Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>